:zap: major update

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 		</header>
 		<div class="ui-content">
 			<div id="ui-content"></div>
-			<p class="steps" style="display: none;">Daily Steps<br /><span id="steps">0</span></p>
+			<p class="steps">ELBN 2024</p>
 			<p onclick="showLog()">v4.2.0</p>
 			<a class="ui-btn my-btn" href="#" id="feedback" onclick="checkAppControl()">
 				SELF-REPORT
@@ -105,7 +105,7 @@
 			<!-- POP UP FOR Valence -->
 			<div class="ui-popup" id="valence-popup">
 				<div class="ui-popup-content">
-					<div class="question">How do you feel?</div>
+					<div class="question">How happy or sad?</div>
 					<!-- GGZ SPECIFIC UI: SUBMIT VALENCE -->
 					<div>
 						<a class="ui-btn ggz-btn" data-rel="popup" href="#arousal-popup" id="submit-valence">
