:zap: adds r-tree method for optimized geofence finding

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 		<div class="ui-content">
 			<div id="ui-content"></div>
 			<p class="steps">ELBN 2024</p>
-			<p onclick="showLog()">v4.2.0</p>
+			<p onclick="showLog()">v4.2.3</p>
 			<a class="ui-btn my-btn" href="#" id="feedback" onclick="checkAppControl()">
 				SELF-REPORT
 			</a>
@@ -227,152 +227,7 @@
 	<script src="js/lowBatteryCheck.js"></script>
 	<script src="js/circle-helper.js"></script>
 	<script src="lib/gb/customFunctions.js"></script>
-	<script>
-		var valence = -1;
-		var arousal = -1;
-		var stress = -1;
-		var convenience = -1;
-		var showCounter = 0;
-		var logoutCounter = 0;
-		var logoinCounter = 0;
-
-		var valenceSliderElement = document.getElementById("valence-value"),
-			valenceSlider = tau.widget.Slider(valenceSliderElement);
-		var arousalSliderElement = document.getElementById("arousal-value"),
-			arousalSlider = tau.widget.Slider(arousalSliderElement);
-		var stressSliderElement = document.getElementById("stress-value"),
-			stressSlider = tau.widget.Slider(stressSliderElement);
-		var convenienceSliderElement = document.getElementById("convenience-value"),
-			convenienceSlider = tau.widget.Slider(convenienceSliderElement);
-
-		function showLogin() {
-			if (showCounter == 4) {
-				tau.openPopup($('#login-popup'));
-				showCounter = 0
-			} else {
-				showCounter++;
-			}
-		}
-		function showLog() {
-			if (showCounter == 4) {
-				tau.openPopup($('#log-popup'));
-				showCounter = 0
-			} else {
-				showCounter++;
-			}
-		}
-		$(document).ready(function () {
-			// $.when(readOne("token", ["settings"])).done(function (data) {
-			// 	if (data == null) {
-			// 		$('#feedback').hide();
-			// 	}
-			// });
-
-			$("#valence-value").change(function () {
-				$("#valence-value-heading").text($('#valence-value').val())
-				var v = Number($('#valence-value').val());
-				$('#valence-low-img').css('opacity', 1 - v / 10 + 0.1);
-				$('#valence-high-img').css('opacity', v / 10 + 0.1);
-			});
-			$("#arousal-value").change(function () {
-				$("#arousal-value-heading").text($('#arousal-value').val());
-				var a = Number($('#arousal-value').val());
-				$('#arousal-low-img').css('opacity', 1 - a / 10 + 0.1);
-				$('#arousal-high-img').css('opacity', a / 10 + 0.1);
-			});
-			$("#stress-value").change(function () {
-				$("#stress-value-heading").text($('#stress-value').val());
-				var w = Number($('#stress-value').val());
-				$('#stress-low-img').css('opacity', 1 - w / 10 + 0.1);
-				$('#stress-high-img').css('opacity', w / 10 + 0.1);
-			});
-			$("#convenience-value").change(function () {
-				$("#convenience-value-heading").text($('#convenience-value').val());
-				var w = Number($('#convenience-value').val());
-				$('#convenience-low-img').css('opacity', 1 - w / 10 + 0.1);
-				$('#convenience-high-img').css('opacity', w / 10 + 0.1);
-			});
-			$('#submit-valence').click(function () {
-				emotion = Number($('#valence-value').val());
-			})
-			$('#submit-arousal').click(function () {
-				intensity = Number($('#arousal-value').val());
-			})
-			$('#submit-stress').click(function () {
-				stress = Number($('#stress-value').val());
-			})
-			$('#submit-convenience').click(function () {
-				convenience = Number($('#convenience-value').val());
-			})
-			$.when(readOne("token", ["settings"])).done(function (data) {
-				if (data == null) {
-					$('#feedback').hide();
-				}
-			});
-			
-			$.when(readOne("stepsview", ["settings"])).done(function (data) {
-				$("#steps").text(data == null ? 0 : data);
-			})
-			// hidden items
-			$('ul.log-list li a').click(function () {
-				log = $(this).text();
-				if (log == "steps_sum") {
-					$.when(readOne("DA", ["settings"])).done(function (da) {
-						var data = JSON.stringify(da);
-						$.when(readOne("DAW", ["settings"])).done(function (daw) {
-							data += JSON.stringify(daw);
-							$.when(readOne("DAR", ["settings"])).done(function (dar) {
-								data += JSON.stringify(dar);
-								$('#log-details').html("<p>" + (data == "null" ? "No Data" : data) + "</p>");
-								tau.openPopup($('#details-popup'));
-							})
-						})
-					})
-				} else if (log == "access_token") {
-					$.when(readOne("token", ["settings"])).done(function (tn) {
-						var data = tn;
-						$('#log-details').html("<p>" + (data == null ? "No Data" : data) + "</p>");
-						tau.openPopup($('#details-popup'));
-					})
-				} else if (log == "last_notif") {
-					$.when(readOne("NT", ["settings"])).done(function (nf) {
-						var data = nf;
-						$('#log-details').html("<p>" + (data == null ? "No Data" : new Date(parseInt(data)).toString()) + "</p>");
-						tau.openPopup($('#details-popup'));
-					})
-				} else if (log == "gb_config") {
-					$.when(readOne("gb_config", ["settings"])).done(function (cf) {
-						var data = JSON.stringify(cf);
-						$('#log-details').html("<p>" + (data == null ? "No Data" : data) + "</p>");
-						tau.openPopup($('#details-popup'));
-					})
-				} else if (log == "db_info") {
-					$('#log-details').html("<p>Loading...</p>");
-					readAll(["activity"]).then(function (data) {
-						var html = "No Data";
-						if (data.length > 0) {
-							html = "<p>#records:" + data.length + "<br/>" + JSON.stringify(data) + "</p>";
-						}
-						$('#log-details').html(html);
-					});
-					tau.openPopup($('#details-popup'));
-				} else if (log == "next_alarm") {
-					$.when(readOne("alarm", ["settings"])).done(function (am) {
-						var data = am;
-						$('#log-details').html("<p>" + (data == null ? "No Data" : tizen.alarm.get(parseInt(data)).getRemainingSeconds() + "(s) remaining") + "</p>");
-						tau.openPopup($('#details-popup'));
-					})
-				} else if (log == "log_out") {
-					if (logoutCounter == 4) {
-						logoutCounter = 0
-						logout();
-					} else {
-						logoutCounter++;
-					}
-				}
-			});
-		});
-	</script>
+	<script src="lib/gb/rbush.min.js"></script>
 </body>
 
 </html>
